public/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
:root {
  --theme: #1d1e20;
  --primary: #d8d8d9;
  --secondary: #eb5234;  
  --accent: #ff005a;
  --panel: rgba(216, 216, 217);
  --panel-text: #303030;
  --menu-text-bg: #303030;
  --not-found: #030005;
}
/* 
  :root is dark theme and
  .dark is actually the light theme
  Im just too lazy to rename it
*/
.dark{
  --theme: #d8d8d9;
  --primary:rgba(0, 0, 0, 0.88);
  --secondary:#eb5234;
  --accent: #ff005a;
  --panel: #303030;
  --panel-text: rgba(216, 216, 217);
  --menu-text-bg: #9e9e9e;
  --not-found: #303030;
}
*,::after,::before{
  box-sizing:border-box
}
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  scroll-behavior: smooth;
  overflow-y: scroll;
  scroll-behavior: smooth;
  -webkit-tap-highlight-color:transparent;
}
body {
  transition: 0.8s;
  font-size:18px;
  line-height:1.6;
  word-break:break-word;
  background:var(--theme);
  font-family:-apple-system,BlinkMacSystemFont,segoe ui,Roboto,Oxygen,Ubuntu,Cantarell,open sans,helvetica neue,sans-serif;
}
.card-body {
  font-family: "Poppins", sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  min-height: 100vh;
}
body.js-stop-transition * { transition:none !important; }
a:hover {
  cursor: pointer;
}
a,body,h1{
  color:var(--primary);
}
header,nav{
  display:block
}
ul{
  padding:0
}
ul li::before{
  content: '';
  position: absolute;
  margin-top: 42px;
  width: 0;
  background-color: var(--secondary);
  z-index: 9999;
  height: 3px;
  transition: 0.8s all;
}
ul li#home-link:hover::before,
ul li#about-link:hover::before {
  width: 45px;
}
ul li#projects-link:hover::before {
  width: 58px;
}
a {
  transition: 0.8s;
}
a:hover {
  color: var(--secondary);
}
a{
  text-decoration:none
}
body,ul{
  margin:0
}
.nav{
  color: var(--primary);
  display:flex;
  flex-wrap:wrap;
  justify-content:space-between;
  max-width: calc(1024px + 24px * 2);
  margin-inline-start:auto;
  margin-inline-end:auto;
  line-height: 60px;
}
.nav a{
  display:block
}
.logo,#menu{
  display:flex;
  margin:auto 24px;
}
.logo{
  flex-wrap:inherit
}
.logo a{
  font-size:24px;
  font-weight:700
}
.logo a img{
  display:inline;
  vertical-align:middle;
  pointer-events:none;
  transform:translate(0,-10%);
  border-radius:6px;
  margin-inline-end:8px
}
#menu{
  list-style:none;
  word-break:keep-all;
  overflow-x:auto;
  white-space:nowrap
}
#menu li+li{
  margin-inline-start: 24px;
}
#menu a{
  font-size:16px
}
#menu .active{
  font-weight:500;
}
.main {
  zoom: 110%;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 50%;
  padding: 10px;
  color: var(--primary);
}
.svg-wrapper {
  margin: 0 auto;
  width: 320px;
  position: relative;
  height: 64px;
  overflow-y: hidden;
}
.shape {
  z-index: 9999;
  stroke-dasharray: 140 540;
  stroke-dashoffset: -474;
  stroke-width: 8px;
  fill: transparent;
  stroke: var(--secondary);
  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
}
.svg-wrapper:hover .shape {
  stroke-width: 2px;
  stroke-dashoffset: 0;
  stroke-dasharray: 760;
}
.name {
  transition: 0.8s;
  font-size: 30px;
  font-weight: 900;
  margin-bottom: 10px;
  transform: translate(0, -64px);
}
.name:hover {
  color: var(--secondary);
  cursor: default;
}
.des {
  transition: 0.8s;
  font-size: larger;
}
.des:hover {
  color: var(--secondary);
  cursor: default;
}
.des:focus {
  color: var(--secondary);
}
.profile {
  width: 190px;
  height: 190px;
  border-radius: 50%;
  transition: 0.8s;
}
.social-icons {
  padding:12px 0;
}
.social-icons a:not(:last-of-type) {
  margin-inline-end:12px;
}
.social-icons a svg {
  height:26px;
  width:26px;
}
.social-icons a {
  color: var(--primary);
  text-decoration: none;
}
.icon {
  transition: 0.8s;
}
.icon:hover {
  color: var(--secondary);
}
.logo-switches{
  flex-wrap:inherit
}
#theme-toggle svg{
  height:18px;
}
button#theme-toggle{
  background-color: var(--theme);
  border: none;
  color: var(--primary);
  font-size:26px;
  margin:auto 4px;
  transition: 0.8s;
}
button#theme-toggle:hover{
  cursor: pointer;
  color: var(--secondary);
}
body.dark #moon{
  vertical-align:middle;
  display:none;
}
body:not(.dark) #sun{
  display:none;
}
.about-section{
  transition: 0.8s;
  border-top-right-radius: 15px;
  background: url('../images/pic.png') no-repeat left;
  background-size: 55%;
  background-color: var(--theme);
  overflow: hidden;
  padding: 100px 0;
}
.inner-container{
  transition: 0.8s;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  width: 55%;
  float: right;
  background-color: var(--panel);
  padding: 150px;
}
.inner-container h1{
  margin-bottom: 30px;
  font-size: 30px;
  font-weight: 900;
}
.text{
  font-size: 13px;
  color: var(--panel-text);
  line-height: 30px;
  text-align: justify;
  margin-bottom: 40px;
}
#about-me {
  color: var(--panel-text);
}
.skills{
  color: var(--panel-text);
  display: flex;
  justify-content: space-between;
  font-weight: 700;
  font-size: 13px;
}

/* Mobile Nav */
.cta {
  cursor: pointer;
  font-weight: 600;
  transition: 0.8s;
  position: absolute;
  right: 14%;
}
.menu {
  display: none;
  color: var(--primary);
  size: 125%;
}
.overlay {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  left: 0;
  top: 0;
  background-color: #24252a;
  overflow-x: hidden;
  transition: all 0.5s ease 0s;
}
.overlay--active {
  width: 100%;
}
.overlay__content {
  display: flex;
  height: 100%;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.overlay a {
  color: white;
  text-decoration: none;
  padding: 15px;
  font-size: 36px;
  display: block;
  transition: all 0.3s ease 0s;
}
.overlay a:hover,
.overlay a:focus {
  color: var(--secondary);
}
.overlay .close {
  position: absolute;
  top: 20px;
  right: 45px;
  font-size: 60px;
  color: #edf0f1;
  cursor: pointer;
}
.mobile-name {
  display: none;
  transition: 0.8s;
  font-size: 30px;
  font-weight: 900;
}
.mobile-name:hover {
  color: var(--secondary);
  cursor: default;
}
.projects {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  position: absolute;
  top: 50%;
  transform: translate(0, -50%);
}

.project-panel {
  background-color: var(--panel);
  flex: 0 1 25%;
  margin: 24px;
  border-radius: 20px;
  height: auto;
  max-height: 600px;
}

.project-panel h2, p {
  color: var(--panel-text);
}

.project-panel-content {
  margin-left: 38px;
  margin-top: 24px;
  margin-right: 40px;
  margin-bottom: 38px;
}

.project-panel-content a {
  color: var(--secondary);
  text-decoration: underline;
}

@media screen and (max-width:1200px){
  .inner-container{
      padding: 80px;
  }
}
@media screen and (max-width:1000px){
  .about-section{
      background-size: 100%;
      padding: 100px 40px;
  }
  .inner-container{
      width: 100%;
  }
}
@media screen and (max-width:600px){
  .about-section{
      padding: 0;
  }
  .inner-container{
      padding: 60px;
  }
}
@media screen and (max-width:768px){
  .profile img{
      transform:scale(.85);
  }
  .first-entry{
      min-height:260px;
  }
  .archive-month{
      flex-direction:column;
  }
  .archive-year{
      margin-top:20px;
  }
  .footer{
      padding:calc((60 - 24px - 10px)/2)24px;
  }
}
@media only screen and (max-width:767px){
  .notfound .notfound-404 h2{
      font-size:24px;
  }
}
@media only screen and (max-width:480px){
  .notfound .notfound-404 h1{
      font-size:182px;
  }
}
@media screen and (min-width:768px){
  ::-webkit-scrollbar{
      width:19px;
      height:11px;
  }
}
@media screen and (max-width:900px){
  .list .top-link{
      transform:translateY(-5rem);
  }
}
@media(prefers-reduced-motion){
  .terms-tags a:active,.button:active,.share-buttons svg:active,.post-entry:active,.top-link,#searchResults .focus,#searchResults li:active{
      transform:none;
  }
}
@media only screen and (max-width: 514px) {
  .nav__links li a,
  .svg-wrapper#main-wrapper {
    display: none;
  }
  .menu,
  .mobile-name {
    display: block;
  }
  .projects {
    display:inline;
    position: absolute;
    top: 130%;
  }
  .project-panel {
    background-color: var(--panel);
    width: 80%;
    margin: 24px;
    border-radius: 20px;
    height: auto;
  }
}
/* Temp */
.temp {
  color: var(--primary);
  transition: .8s;
  margin-top: 3px;
  font-weight: 500;
  max-width: 480px;
  text-align: center;
  position: absolute;
  left: 50%;
  transform: translate(-50%, 0);
}
.temp:hover {
  cursor: default;
}
body .container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  max-width: 90%;
  margin: 40px 0;
  margin-top: 150px;
}

body .container .card {
  position: relative;
  min-width: 320px;
  height: 440px;
  box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
    inset -5px -5px 15px rgba(255, 255, 255, 0.1),
    5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
  border-radius: 15px;
  margin: 30px;
  transition: 0.5s;
}

body .container .card:nth-child(1) .box .content a {
  background: #2196f3;
}

body .container .card:nth-child(2) .box .content a {
  background: #e91e63;
}

body .container .card:nth-child(3) .box .content a {
  background: #23c186;
}

body .container .card:nth-child(5) .box .content a {
  background: var(--secondary);
}

body .container .card:nth-child(6) .box .content a {
  background: #f3ef84;
}

body .container .card:nth-child(7) .box .content a {
  background: #8083d0;
}

body .container .card .box {
  position: absolute;
  top: 20px;
  left: 20px;
  right: 20px;
  bottom: 20px;
  background: #2a2b2f;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  transition: 0.5s;
}

body .container .card .box:hover {
  transform: translateY(-50px);
}

body .container .card .box:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 50%;
  height: 100%;
  background: rgba(255, 255, 255, 0.03);
}

body .container .card .box .content {
  padding: 20px;
  text-align: center;
}

body .container .card .box .content h2 {
  position: absolute;
  top: -10px;
  right: 30px;
  font-size: 8rem;
  color: rgba(255, 255, 255, 0.1);
}

body .container .card .box .content h3 {
  font-size: 1.8rem;
  color: #fff;
  z-index: 1;
  transition: 0.5s;
  margin-bottom: 15px;
}

body .container .card .box .content p {
  font-size: 1rem;
  font-weight: 300;
  color: rgba(255, 255, 255, 0.9);
  z-index: 1;
  transition: 0.5s;
}
body .container .card .box .content a {
  position: relative;
  display: inline-block;
  padding: 8px 20px;
  background: black;
  border-radius: 5px;
  text-decoration: none;
  color: white;
  margin-top: 20px;
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
  transition: 0.5s;
}
body .container .card .box .content a:hover {
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
  background: #fff;
  color: #000;
}

